--- a/404.html
+++ b/404.html
@@ -20,6 +20,5 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong><big>Ceci n'est pas une page</big></strong></p>
 </div>
