--- a/404.html
+++ b/404.html
@@ -20,5 +20,5 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong><big>Ceci n'est pas une page</big></strong></p>
+  <p><span style="font-family:Magritte;"><big>Ceci n'est pas une page</big></span></p>
 </div>
