--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1><span style="font-family:Helvitica; font-size: 15em;">404</span></h1>
 
-  <p><span style="font-family:Magritte;"><big>Ceci n'est pas une page</big></span></p>
+  <p><span style="font-family:Magritte; font-size: 1em;">Ceci n'est pas une page</big></span></p>
 </div>
